fix: elimination du overflow-x des elements et margin entre boutton de navigation

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,13 @@
 /* Deafaut body colors */
+*{
+  
+}
 body{
     overflow-x: hidden;
 }
 body, html {
     height: 100%;
-}
-html::-webkit-scrollbar{
-    width: 1.4rem;
-}
-html::-webkit-scrollbar-track{
-    background-color: #222;
-}
-html::-webkit-scrollbar-thumb{
-    background-color: #FEC81A;
+    width: 100%;
 }
 body{
     background-color: #0D100D;
@@ -33,6 +28,8 @@ a{
 }
 header{
     height: 100%;
+    width: 100%;
+    overflow-x: hidden;
 }
 nav{
     height: auto;
